<resources>
    <string name="app_name">ChoreApplication</string>
    <string name="action_settings">Settings</string>
    <string name="chore_application">Chore Application</string>
    <string name="getStarted">Get Started!</string>
    <string name="number_of_users">Number of users:</string>
    <string name="toggle_reward_system">Reward System</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="gettingStarted">Getting Started!</string>
    <string name="number_of_children">Number of children:</string>
    <string name="number_of_regular">Number of regular:</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="password_protection">Password Protection</string>
    <string name="about_us">About US</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="name_your_accounts">Name your Accounts!</string>
    <string name="create_chore">Create Chore!</string>
    <string name="modify_chore">Edit Chore!</string>
    <string name="chore_status">Completed</string>
    <string name="enter_chore_title">Enter Chore Title!</string>
    <string name="enter_chore_description">Enter chore description!</string>
    <string name="reward_system">Reward System:</string>
    <string name="set_custom_reward">Set Custom Reward!</string>
    <string name="set_reward">Set Reward:</string>
    <string name="assignment">Assignment:</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="reset_points">Reset Points</string>
    <string name="rewardsusertally">RewardsUserTally</string>
    <string name="settings">Settings</string>
    <string name="add_regular_user">Add Regular User</string>
    <string name="clear_all_chores">Clear all chores</string>
    <string name="disable_reward_system">Disable Reward System</string>
    <string name="chores">Chores:</string>
    <string name="change_pin">Change pin</string>
    <string name="add_reward_to_system">Add Reward to System</string>
    <string name="add_child_user">Add Child User</string>
    <string name="account">Account:</string>
    <string name="chore_list">Chore List!</string>
    <string name="finish">Finish</string>
    <string name="resources">Resources:</string>
    <string name="star">*</string>
    <string name="enter_first_resource">Enter first resource!</string>
    <string name="enter_second_resource">Enter second resource!</string>
    <string name="enter_third_resource">Enter third resource!</string>
    <string name="set_your_passwords">Set your Passwords!</string>
    <string name="enter_password_here">Enter password here!</string>
    <string name="enter_default_rewards">Enter default rewards:</string>
    <string name="enter_reward_1">Enter reward 1!</string>
    <string name="enter_reward_2">Enter reward 2!</string>
    <string name="enter_reward_3">Enter reward 3!</string>
    <string name="enter_reward_5">Enter reward 5!</string>
    <string name="enter_reward_4">Enter reward 4!</string>
    <string name="the_chore_app_is_developed_by_five_members_in_university_of_ottawa_students_in_seg_2105_jonathan_calles_gallegos_james_lee_ahmed_haj_abdel_khaleq_ariel_kim_and_hussein_sakr">The chore app is developed by five members in University of Ottawa students in SEG 2105. Jonathan Calles-Gallegos, James Lee, Ahmed Haj Abdel Khaleq, Ariel Kim, and Hussein Sakr</string>
    <string name="set_amount_of_points_reward">Set amount of points reward!</string>
    <string name="for_all" />
</resources>
