<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simulatedminds.choreapplication.CreateChoreActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/CreateChoreTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/create_chore"
            android:textAlignment="center"
            android:textColor="#006699"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterChoreTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_chore_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/enterChoreDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_chore_description"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/optionsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/assignment"
            android:textAlignment="textStart"
            android:textColor="#FF6610"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a listview here or something" />

        <TextView
            android:id="@+id/setRewardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/set_reward"
            android:textAlignment="textStart"
            android:textColor="#FF6610"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterReward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/set_custom_reward"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rewardSystemView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/reward_system"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <Spinner
                android:id="@+id/rewardSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
