<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simulatedminds.choreapplication.CreateAppActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/gettingStarted"
            android:textAlignment="center"
            android:textColor="#006699"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/numberOfUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfUsersView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_users"
                android:textColor="#006699"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/numberOfRegularUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/numberOfRegularUsersView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:text="@string/number_of_regular"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <Spinner
                    android:id="@+id/regularSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numberOfChildUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/numberOfChildUsersView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:text="@string/number_of_children"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <Spinner
                    android:id="@+id/childSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="match_parent" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toggleRewardSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/toggleRewardSystemView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/toggle_reward_system"
                android:textColor="#006699"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/toggleButtonOfRewardSystem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ff0000"
                android:checked="false"
                android:text="@string/togglebutton" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
